# log_in_s3_bucket_destroyer

./: .gitignore  Makefile  README.md  compose.yaml  lambda_handler.py  mypy.ini  pyproject.toml
.github/workflows/: cd.yml  ci.yml
cloudformation/: README.md  deploy_user.yaml  main.yaml
config/: development.yaml  production.yaml  sample.yaml  test.yaml
docker_files/: Dockerfile
log_in_s3_bucket_destroyer/: __init__.py  base.py  log_in_s3_bucket_destroyer.py  main.py
log_in_s3_bucket_destroyer/models/aws/: base.py
log_in_s3_bucket_destroyer/models/aws/s3/: client.py
tests/: conftest.py  test_main.py
tests/models/aws/s3/: test_client.py
