[tool.poetry]
name = "log-in-s3-bucket-destroyer"
version = "0.1.0"
description = "Destroy file in S3 Bucket."
authors = ["koba-masa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
