[tool.poetry]
name = "log-in-s3-bucket-destroyer"
version = "0.1.0"
description = "Destroy file in S3 Bucket."
authors = ["koba-masa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"
pyaml-env = "^1.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "^1.8.0"
black = "^24.1.1"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
